integrated product APIs and customize Product Apis